--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@ U: U=!riz!
 U: Y=!groohs!
 U: H=!groohe!
 U: Q=!acckoron!
+U: I=!accflat!
+U: V=!accnatural!
 U: T=!trill!
 U: X=!upbow!
 U: S=!slide!
+U: W=!sokut!
 yNF/2G/2 A/2B/2 YyPA/2G/2 H!2!y OA/2 A/4OA/2 UG2yyyyyyy
 yyyyyB/4OA/2SUG2 yy B/4OA/2SUG2
 yyyyyc/4OB/2SUA2 yy B/4OA/2SUG2
